# moonsight

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.mbt.md  moon.mod  moonsight-demo.sh
audio/: backend.mbt  lib.mbt  mixer.mbt  mixer_test.mbt  moon.pkg  pkg.generated.mbti
docs/: draw-list-pack.md  formal-1.0-author-guide.md  formal-1.0-m0-checkpoint-verification.md  formal-1.0-m1-contract-freeze.md  formal-1.0-migration-example.json  formal-1.0-rc-tooling.md  host-commands.md  moon-yuki-subset.md  play-input.md  project-layout.md  release-1.0-verification.md  screen-language.md  slug-text.md  ui-moonbit.md
host_desktop/: README.md
host_desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
host_desktop/tauri/src-tauri/capabilities/: default.json
host_desktop/tauri/src-tauri/icons/: henry.w@example.net
host_desktop/tauri/src-tauri/permissions/: save.toml
host_desktop/tauri/src-tauri/src/: lib.rs  main.rs
host_web/: main.mbt  main_wbtest.mbt  moon.pkg  pkg.generated.mbti
render/: glyph_atlas.mbt  gpu.mbt  lib.mbt  moon.pkg  noto_advances.mbt  pack_test.mbt  pkg.generated.mbti  renderer.mbt  snapshot.mbt  snapshot_test.mbt  sprite_batch.mbt  text_layout.mbt  text_layout_test.mbt  types.mbt
runtime/: backlog.mbt  backlog_test.mbt  director.mbt  director_test.mbt  engine.mbt  engine_test.mbt  grapheme.mbt  grapheme_test.mbt  host.mbt  identified_locale_wbtest.mbt  intent.mbt  lib.mbt  locale.mbt  locale_catalog.mbt  locale_catalog_test.mbt  logical_state.mbt  logical_state_wbtest.mbt  moon.pkg  pkg.generated.mbti  prefs.mbt  prefs_test.mbt  vm.mbt  (+16 more)
(+225 files in other folders)
