[package]
name = "moonsight"
version = "0.1.0"
description = "MoonSight desktop shell — loads the host_web static build"
authors = ["MoonSight"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "moonsight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
